<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Death Rays</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="menu">Menu</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="about">About</string>
    <string name="version">Version: 1.2</string>
    <!--<string name="developers">Developers:</string>-->
    <!--<string name="devN">Evgeny Novoselov</string>-->
    <!--<string name="devP">Roman Homenko</string>-->
    <string name="gameOver">Game over</string>
    <string name="score">Score</string>
    <string name="maxScore">Target score</string>

    <string name="help">Swipe to rotate. Don\'t crash.</string>
    <string name="help2">Beat your scores.</string>
    <string name="congrats">Congratulations, you\'re in the lead!</string>

    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="companyName">Nortorix Soft</string>

</resources>
