<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/settings">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-2956406558690647/9000441615" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_background"
        android:onClick="onClick"
        android:text="@string/back"
        android:textSize="40sp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF555555"
        android:onClick="onClick"
        android:text="@string/easy"
        android:textSize="40sp"
        android:layout_above="@+id/medium"
        android:layout_alignLeft="@+id/hard"
        android:layout_alignRight="@+id/hard"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <Button
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff555555"
        android:onClick="onClick"
        android:text="@string/medium"
        android:textSize="40sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_back"
        android:layout_alignRight="@+id/button_back"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@+id/hard" />

    <Button
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff555555"
        android:onClick="onClick"
        android:text="@string/hard"
        android:textSize="40sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_back"
        android:layout_alignRight="@+id/button_back"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:onClick="onClick"
        android:text="@string/about"
        android:textSize="40sp"
        android:layout_above="@+id/button_back"
        android:layout_alignRight="@+id/button_back"
        android:layout_alignLeft="@+id/button_back"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp" />
</RelativeLayout>