<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RacingGame">

    <com.games.deathrays.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:text="Score :"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/scoreValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:layout_toRightOf="@+id/scoreText"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="40dp" />

    <RelativeLayout
        android:id="@+id/pauseMenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#c83d3d3d"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/button_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:background="@drawable/button_background"
            android:minHeight="64dp"
            android:minWidth="64dp"
            android:onClick="onClick"
            android:text=">"
            android:textSize="40dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_back"
            android:layout_alignLeft="@+id/button_back"
            android:layout_alignRight="@+id/button_back"
            android:layout_marginBottom="3dp"
            android:background="@drawable/button_background"
            android:enabled="true"
            android:onClick="onClick"
            android:text="@string/restart"
            android:textSize="40dp" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/menu"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/companyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/pause"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gameMenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pauseMenu"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:background="@drawable/button_background"
            android:minHeight="64dp"
            android:minWidth="64dp"
            android:onClick="onClick"
            android:text="II"
            android:textSize="40dp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
